--- a/2403DrawingsTestHW/Base.lproj/Main.storyboard
+++ b/2403DrawingsTestHW/Base.lproj/Main.storyboard
@@ -12,12 +12,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="iRO-oS-UhI" userLabel="Image View - UpSide indent">
+                                <rect key="frame" x="0.0" y="0.0" width="768" height="20"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                            </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="UeN-i5-KU0" userLabel="canvas">
-                                <rect key="frame" x="0.0" y="0.0" width="768" height="800"/>
+                                <rect key="frame" x="0.0" y="20" width="768" height="780"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="YMj-vn-Uzr" userLabel="tempCanvas">
-                                <rect key="frame" x="0.0" y="0.0" width="768" height="800"/>
+                                <rect key="frame" x="0.0" y="20" width="768" height="780"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="PEL-Kk-vjx" userLabel="Image View - Separator">
@@ -295,7 +300,7 @@
                                 </connections>
                             </slider>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <connections>
                         <outlet property="blueSlider" destination="jeV-GQ-YnL" id="d3p-Ml-MI7"/>
